<resources>
    <string name="app_name">RETO_1_XEO</string>
    <string name="tienda">Tienda</string>
    <string name="ubicacion">Ubicación</string>
    <string name="galeria">Galeria</string>
    <string name="info">Info</string>
    <string name="logo">Logo</string>
    <string name="carrito">Carrito</string>
    <string name="perfil">Perfil</string>
    <string name="fotos_de_las_tiendas">Fotos de las Tiendas</string>
    <string name="tiendas_cercanas">Tiendas Cercanas</string>
    <string name="logo_description">Logo de XEO</string>
    <string name="historia_text">Fundada en 2010 por un grupo de entusiastas de la tecnología, XEO nació con el objetivo de ofrecer la mejor selección de consolas, tablets y videojuegos para todos. Desde sus inicios como una pequeña tienda local, hemos crecido para convertirnos en un referente en el sector, adaptándonos siempre a las necesidades y tendencias de nuestros clientes.</string>
    <string name="descripcion_text">Hoy en día, contamos con una amplia gama de productos que incluye consolas móviles, tablets y una extensa biblioteca de videojuegos. Estamos comprometidos con la innovación y la mejora continua, siempre buscando nuevas formas de ofrecer a nuestros clientes lo mejor del mundo del entretenimiento.</string>
    <string name="contacto_text">Si deseas más información sobre nuestros productos o servicios, no dudes en ponerte en contacto con nosotros a través de nuestras redes sociales. ¡Estamos aquí para ayudarte!</string>
    <string name="informacion">Nuestra Historia</string>
    <string name="login">Iniciar sesión</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="bienvenido">(👉ﾟヮﾟ)👉BIENVENIDO👈(ﾟヮﾟ👈)</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta? Regístrate aquí</string>
    <string name="disfruta_de_nuestras_tiendas">DISFRUTA DE NUESTRAS TIENDAS</string>
    <string name="atras">Volver</string>
    <string name="register">Registro</string>
    <string name="registro">✍️(◔◡◔)REGÍSTRATE✍️(◔◡◔)</string>
    <string name="crea_una_cuenta">CREA TU CUENTA</string>
    <string name="nombre">Nombre</string>
    <string name="repetir_contrasena">Repetir Contraseña</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="apellido_1">Apellido 1</string>
    <string name="apellido_2">Apellido 2</string>
    <string name="profile">Perfil</string>
    <string name="direccion">Dirección</string>
    <string name="foto_perfil">Foto de perfil</string>
    <string name="modificar_credenciales">Modificar Credenciales</string>
    <string name="cambiar_avatar">Cambiar Avatar</string>
    <string name="buscar_juegos">Buscar juegos</string>
    <string name="game_image">Imagen juego</string>
    <string name="_0_00">€0.00</string>
    <string name="game_name">Game Name</string>
    <string name="game_details">Detalles del juego</string>
    <string name="buscar_consola">Buscar consola</string>
    <string name="console_image">Imagen consola</string>
    <string name="console_details">Detalles de la consola</string>
    <string name="buscar_smartphone">Buscar smarts</string>
    <string name="smartphone_image">Imagen del smart</string>
    <string name="smart_name">Smart Name</string>
    <string name="console_name">Console Name</string>
    <string name="smart_image">Imagen smart</string>
    <string name="smart_details">Detalles smart</string>
    <string name="buy">Comprar</string>
    <string name="rent">Alquilar</string>
    <string name="carrito_de_compras">Carrito</string>
    <string name="cerrar_carrito">Cerrar carrito</string>
    <string name="order">Product Order</string>
    <string name="confirme_direcci_n_de_env_o">Confirme Dirección de Envío</string>
    <string name="descripci_n">Descripción</string>
    <string name="pa_s">País</string>
    <string name="provincia">Provincia</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="ciudad">Ciudad</string>
    <string name="calle">Calle</string>
    <string name="n_mero">Número</string>
    <string name="confirmar_pedido">Confirmar Pedido</string>
    <string name="_0">0</string>
    <string name="edit_credentials">Edit Credentials</string>
    <string name="editar_datos">Editar Datos</string>
    <string name="guardar">Guardar</string>
    <string name="confirmar_nueva_contrase_a">Confirmar Nueva Contraseña</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="tel_fono">Teléfono</string>
    <string name="numero">Numero</string>
    <string name="codigo_postal">CP</string>
    <string name="voice_search">Busqueda por voz</string>
    <string name="diga_algo">Diga el nombre del juego...</string>
    <string name="support_title">Soporte Tecnico</string>
    <string name="console_support_title">Consolas</string>
    <string name="console_support_phone">944320021</string>
    <string name="console_support_email">xeo.consola@gmail.com</string>
    <string name="smart_support_title">Smarts</string>
    <string name="smart_support_phone">944320022</string>
    <string name="smart_support_email">xeo.smart@gmail.com</string>
    <string name="support" />
</resources>