<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_shop">

    <fragment
        android:id="@+id/navigation_shop"
        android:name="com.dam2.reto_1_xeo.fragments.ShopFragment"
        android:label="@string/tienda"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.dam2.reto_1_xeo.fragments.LocationFragment"
        android:label="@string/ubicacion"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.dam2.reto_1_xeo.fragments.GalleryFragment"
        android:label="@string/galeria"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.dam2.reto_1_xeo.fragments.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.dam2.reto_1_xeo.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.dam2.reto_1_xeo.fragments.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.dam2.reto_1_xeo.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_game_details"
        android:name="com.dam2.reto_1_xeo.fragments.GameDetailsFragment"
        android:label="@string/game_details"
        tools:layout="@layout/fragment_game_details" />

    <fragment
        android:id="@+id/navigation_console_details"
        android:name="com.dam2.reto_1_xeo.fragments.ConsoleDetailsFragment"
        android:label="@string/console_details"
        tools:layout="@layout/fragment_console_details" />

    <fragment
        android:id="@+id/navigation_smart_details"
        android:name="com.dam2.reto_1_xeo.fragments.SmartDetailsFragment"
        android:label="@string/smart_details"
        tools:layout="@layout/fragment_smart_details" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.dam2.reto_1_xeo.fragments.OrderFragment"
        android:label="@string/order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_edit_credentials"
        android:name="com.dam2.reto_1_xeo.fragments.EditCredentialsFragment"
        android:label="@string/edit_credentials"
        tools:layout="@layout/fragment_edit_credentials" />
</navigation>