<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/primary"
    tools:context=".fragments.EditCredentialsFragment">

    <ImageButton
        android:id="@+id/backButton"
        style="@style/CircularButton"
        android:src="@drawable/arrow_back_ios_24px"
        android:contentDescription="@string/atras"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <EditText
                android:id="@+id/nombreEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/nombre"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/apellido1EditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/apellido_1"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/apellido2EditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/apellido_2"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/ciudadEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/ciudad"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/provinciaEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/provincia"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/paisEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/pa_s"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/calleEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/calle"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/numeroEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/numero"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/codigoPostalEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/codigo_postal"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/telefonoEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/tel_fono"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/newPasswordEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/nueva_contrase_a"
                android:inputType="textPassword"
                android:layout_marginTop="16dp" />

            <EditText
                android:id="@+id/confirmNewPasswordEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/confirmar_nueva_contrase_a"
                android:inputType="textPassword"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/saveButton"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardar"
                android:layout_marginTop="16dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
