<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/primary"
    tools:context=".fragments.RegisterFragment">

    <ImageButton
        android:id="@+id/backButton"
        style="@style/CircularButton"
        android:src="@drawable/arrow_back_ios_24px"
        android:contentDescription="@string/atras"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/titleTextView"
        style="@style/Title"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subtitleTextView"
        style="@style/Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crea_una_cuenta"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/nameEditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:hint="@string/nombre"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/lastName1EditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:hint="@string/apellido_1"
        android:inputType="text"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/lastName2EditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:hint="@string/apellido_2"
        android:inputType="text"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/lastName1EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="emailAddress"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/lastName2EditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/passwordEditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="password"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:autofillHints="newPassword"
        android:hint="@string/repetir_contrasena"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/registerButton"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/registrarse"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
