<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:background="@color/primary"
    android:elevation="16dp"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imageViewSmart"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/smartphone_image" />

    <TextView
        android:id="@+id/textViewName"
        style="@style/Text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/smart_name"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/textViewPrice"
        style="@style/Text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0_00" />
</LinearLayout>
