<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragments.SupportFragment">

    <ImageButton
        android:id="@+id/backButton"
        style="@style/CircularButton"
        android:src="@drawable/arrow_back_ios_24px"
        android:contentDescription="@string/atras"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/support_title"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/support_title"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_console_support"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/support_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/console_support_title"
                style="@style/Subtitle"
                android:textColor="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/console_support_title"/>

            <TextView
                android:id="@+id/console_support_phone"
                style="@style/Text"
                android:textColor="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/console_support_phone"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/console_support_email"
                style="@style/Text"
                android:textColor="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/console_support_email"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_smart_support"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/card_console_support"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/text"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/smart_support_title"
                style="@style/Subtitle"
                android:textColor="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_support_title"/>

            <TextView
                android:id="@+id/smart_support_phone"
                style="@style/Text"
                android:textColor="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_support_phone"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:id="@+id/smart_support_email"
                style="@style/Text"
                android:textColor="@color/primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smart_support_email"
                android:clickable="true"
                android:focusable="true"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>